test/src/e2e_vm_tests/test_programs/should_fail/abi_method_signature_mismatch/src/main.sw
// This should result in an error saying that the method signature of the
// implementation does not match the declaration.

contract;

abi MyContract {
    fn foo(x: u64) -> str[7];
}

impl MyContract for Contract {
    fn foo(s: str[7]) -> str[7] {
        s
    }
}
